--- a/frontend/src/components/GameKeyBoard/styles.css
+++ b/frontend/src/components/GameKeyBoard/styles.css
@@ -1,10 +1,9 @@
 #keyboard-container {
 	/* max-width: 500px; */
-	width: 95%;
+	width: 96%;
 	/* margin-top: 25px; */
 	justify-self: center;
 	align-self: center;
-	
 }
 
 
