--- a/frontend/src/components/GamePieces/GameTile/styles.css
+++ b/frontend/src/components/GamePieces/GameTile/styles.css
@@ -38,7 +38,7 @@
 			font-weight: 700;
 			height: 2.3rem;
 			width: 2.3rem;
-			margin-left: 0;
+			margin: 0.01rem;
 		}
 }
 /* ==== Medium and Larger Device ==== */
