--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -5,7 +5,6 @@
 	align-items: flex-end;
 	padding: 1rem 0 .5rem;
 	height: 3rem;
-	margin-top: 3px;
 }
 
 .game-navbar span {
@@ -39,4 +38,11 @@
 	transition: all 0.2s;
 	border: none;
 	cursor: pointer;
+}
+
+@media only screen and (max-width: 400px) {
+	.game-navbar {
+		height: 2.8rem;
+	}
+
 }
