--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,8 +9,6 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #fff;
 	background-color: #121213;
-	overflow: hidden;
-	height: 100%;
 	width: 100%;
 	-webkit-text-size-adjust: none;
 }
@@ -22,6 +20,5 @@ body {
 	flex-direction: column;
 	align-items: stretch;
 	justify-content: space-around;
-	overflow: hidden;
 }
 
